fix for overflow on navbar-collapse

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,11 @@ body {
   margin-top: 80px;
 }
 
+.navbar-collapse{
+  margin: 0;
+  padding: 0; 
+}
+
 .section-spacing {
   margin-bottom: 5%;
   margin-top: 2%;
